# jupyterlab-log-monitor

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  .prettierignore  LICENSE  MANIFEST.in  README.md  RELEASE.md  install.json  package-lock.json  package.json  pyproject.toml
.github/workflows/: build.yml  check-release.yml
binder/: environment.yml  postBuild
schema/: plugin.json
src/: index.ts
src/__tests__/: jupyterlab_log_monitor.spec.ts
ui-tests/: package.json
ui-tests/tests/: jupyterlab_log_monitor.spec.ts
